--- a/html/框架和库/promise.html
+++ b/html/框架和库/promise.html
@@ -35,7 +35,7 @@
 <div class="container">
     
         <div class="page-toc">
-            <ul><li><a href="#t01. 异步回调">1. 异步回调</a><ul><li><a href="#t11.1 回调地狱">1.1 回调地狱</a></li><li><a href="#t21.2 并行结果">1.2 并行结果</a></li></ul></li><li><a href="#t32. Promise">2. Promise</a></li><li><a href="#t43. Promise的三种状态">3. Promise的三种状态</a></li><li><a href="#t54. 构造一个Promise">4. 构造一个Promise</a></li><li><a href="#t65. promise 做为函数的返回值">5. promise 做为函数的返回值</a></li><li><a href="#t76.promise的链式调用">6.promise的链式调用</a></li><li><a href="#t87.promise API">7.promise API</a><ul><li><a href="#t97.1 Promise.all">7.1 Promise.all</a></li><li><a href="#t107.2 Promise.race">7.2 Promise.race</a></li><li><a href="#t117.3 Promise.resolve">7.3 Promise.resolve</a></li><li><a href="#t127.4 Promise.reject">7.4 Promise.reject</a></li></ul></li><li><a href="#t138. q的用法">8. q的用法</a></li><li><a href="#t149. blurbird">9. blurbird</a></li><li><a href="#t1510. promise/a+实现原理">10. promise/a+实现原理</a></li><li><a href="#t1611. 动画之promise版">11. 动画之promise版</a></li></ul>
+            <ul><li><a href="#t01. 异步回调">1. 异步回调</a><ul><li><a href="#t11.1 回调地狱">1.1 回调地狱</a></li><li><a href="#t21.2 并行结果">1.2 并行结果</a></li></ul></li><li><a href="#t32. Promise">2. Promise</a></li><li><a href="#t43. Promise的三种状态">3. Promise的三种状态</a></li><li><a href="#t54. 构造一个Promise">4. 构造一个Promise</a></li><li><a href="#t65. promise 做为函数的返回值">5. promise 做为函数的返回值</a></li><li><a href="#t76.promise的链式调用">6.promise的链式调用</a></li><li><a href="#t87.promise API">7.promise API</a><ul><li><a href="#t97.1 Promise.all">7.1 Promise.all</a></li><li><a href="#t107.2 Promise.race">7.2 Promise.race</a></li><li><a href="#t117.3 Promise.resolve">7.3 Promise.resolve</a></li><li><a href="#t127.4 Promise.reject">7.4 Promise.reject</a></li></ul></li><li><a href="#t138. q的用法">8. q的用法</a></li><li><a href="#t149. bluebird">9. bluebird</a></li><li><a href="#t1510. promise/a+实现原理">10. promise/a+实现原理</a></li><li><a href="#t1611. 动画之promise版">11. 动画之promise版</a></li></ul>
         </div>
 
         <div class="content markdown-body">
@@ -125,15 +125,15 @@ promise.then(Fulfilled,Rejected)
 </li>
 </ul>
 <h2 id="t65. promise &#x505A;&#x4E3A;&#x51FD;&#x6570;&#x7684;&#x8FD4;&#x56DE;&#x503C;">5. promise &#x505A;&#x4E3A;&#x51FD;&#x6570;&#x7684;&#x8FD4;&#x56DE;&#x503C; <a href="#t65. promise &#x505A;&#x4E3A;&#x51FD;&#x6570;&#x7684;&#x8FD4;&#x56DE;&#x503C;"> # </a></h2>
-<pre><code>function ajax (queryUrl) {
-  return new Promise((reslove, reject) =&gt; {
+<pre><code>function ajaxPromise (queryUrl) {
+  return new Promise((resolve, reject) =&gt; {
     let xhr = new XMLHttpRequest();
     xhr.open(&apos;GET&apos;, queryUrl, true);
     xhr.send(null);
     xhr.onreadystatechange = () =&gt; {
       if (xhr.readyState === 4) {
         if (xhr.status === 200) {
-          reslove(xhr.responseText);
+          resolve(xhr.responseText);
         } else {
           reject(xhr.responseText);
         }
@@ -204,7 +204,7 @@ var deferred = Q.defer();
      deferred.resolve();
   }, 5000);
   return deferred.promise;
-</code></pre><h2 id="t149. blurbird">9. blurbird <a href="#t149. blurbird"> # </a></h2>
+</code></pre><h2 id="t149. bluebird">9. bluebird <a href="#t149. bluebird"> # </a></h2>
 <p>&#x5B9E;&#x73B0; promise &#x6807;&#x51C6;&#x7684;&#x5E93;&#x662F;&#x529F;&#x80FD;&#x6700;&#x5168;&#xFF0C;&#x901F;&#x5EA6;&#x6700;&#x5FEB;&#x7684;&#x4E00;&#x4E2A;&#x5E93;</p>
 <pre><code>var Promise = require(&apos;bluebird&apos;);
 var fs = require(&apos;fs&apos;);
