--- a/html/框架和库/promise.html
+++ b/html/框架和库/promise.html
@@ -198,7 +198,7 @@ ajaxPromise(&apos;http://www.baidu.com&apos;)
 <li>&#x53C2;&#x6570;&#x4E00;&#x822C;&#x5C31;&#x662F;&#x629B;&#x51FA;&#x7684;&#x9519;&#x8BEF;&#x4FE1;&#x606F;&#x3002;</li>
 </ul>
 <h2 id="t138. q&#x7684;&#x7528;&#x6CD5;">8. q&#x7684;&#x7528;&#x6CD5; <a href="#t138. q&#x7684;&#x7528;&#x6CD5;"> # </a></h2>
-<pre><code>var Q = require(&apos;q);
+<pre><code>var Q = require(&apos;q&apos;);
 var deferred = Q.defer();
   setTimeout(function() {
      deferred.resolve();
