--- a/html/框架和库/gulp.html
+++ b/html/框架和库/gulp.html
@@ -40,7 +40,7 @@
 
         <div class="content markdown-body">
 
-            <script id="autoJs6712255a12" type="text/javascript">var pNode=document.getElementById("autoJs6712255a12").parentNode,pt,pb,dWidth = pNode.clientWidth,pHeight = pNode.clientHeight,dHeight = ReCallHeight(pHeight, dWidth,pNode);function ReCallHeight(h, w,a) {try{pt = window.getComputedStyle(a,null).paddingTop;pb = window.getComputedStyle(a,null).paddingBottom;}catch(e){pt = a.currentStyle.paddingTop;pb = a.currentStyle.paddingBottom;}h = h- parseInt(pt)- parseInt(pb);if(h && (typeof h == "number") && h==h && h>0){return h;}else{var ua = navigator.userAgent.toLowerCase();var ipad = ua.match(/(iPad).*OS\s([\d_]+)/),isIphone = !ipad && ua.match(/(iPhone\sOS)\s([\d_]+)/),isAndroid = ua.match(/(Android)\s+([\d.]+)/),isMobile = isIphone || isAndroid;if(isMobile){return w*9/16;}else{return (w*9/16)+36;}}} var letvcloud_player_conf =  {"uu":"zna4ig8gbr","vu":"6712255a12","auto_play":1,"gpcflag":1,"width": dWidth,"height": dHeight};</script><script type="text/javascript" src="http://yuntv.letv.com/bcloud.js"></script>
+            <embed src="http://yuntv.letv.com/bcloud.swf" allowfullscreen="true" quality="high" width="640" height="360" align="middle" allowscriptaccess="always" flashvars="uu=zna4ig8gbr&amp;vu=6712255a12&amp;auto_play=1&amp;gpcflag=1&amp;width=640&amp;height=360" type="application/x-shockwave-flash">
 
 <p><a href="https://github.com/zhufengnodejs/201605gulp">&#x89C6;&#x9891;&#x4E2D;&#x9879;&#x76EE;&#x4EE3;&#x7801;</a></p>
 <h2 id="t01. &#x4EC0;&#x4E48;&#x662F;gulp">1. &#x4EC0;&#x4E48;&#x662F;gulp <a href="#t01. &#x4EC0;&#x4E48;&#x662F;gulp"> # </a></h2>
