--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>珠峰JS全栈</title>
 
-    <link rel="stylesheet" type="text/css" href="static/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/main.css">
 </head>
 <body>
 <div class="navbar navbar-line">
@@ -42,66 +42,66 @@
 
             <h1 id="t0git">git <a href="#t0git"> # </a></h1>
 <ul>
-<li><a href="../../html/Git\git&#x5165;&#x95E8;.html">git&#x5165;&#x95E8;</a></li>
-<li><a href="../../html/&#x5DE5;&#x5177;\webstorm&#x5B89;&#x88C5;&#x4E0E;&#x914D;&#x7F6E;.html">webstorm&#x5B89;&#x88C5;&#x4E0E;&#x914D;&#x7F6E;</a><h1 id="t1node&#x57FA;&#x7840;">node&#x57FA;&#x7840; <a href="#t1node&#x57FA;&#x7840;"> # </a></h1>
+<li><a href="doc/html/Git\git&#x5165;&#x95E8;.html">git&#x5165;&#x95E8;</a></li>
+<li><a href="doc/html/&#x5DE5;&#x5177;\webstorm&#x5B89;&#x88C5;&#x4E0E;&#x914D;&#x7F6E;.html">webstorm&#x5B89;&#x88C5;&#x4E0E;&#x914D;&#x7F6E;</a><h1 id="t1node&#x57FA;&#x7840;">node&#x57FA;&#x7840; <a href="#t1node&#x57FA;&#x7840;"> # </a></h1>
 </li>
-<li><a href="../../html/node&#x57FA;&#x7840;\node&#x5B89;&#x88C5;&#x4E0E;&#x914D;&#x7F6E;.html">node&#x5B89;&#x88C5;&#x4E0E;&#x914D;&#x7F6E;</a></li>
-<li><a href="../../html/node&#x57FA;&#x7840;\&#x6A21;&#x5757;.html">&#x6A21;&#x5757;</a></li>
-<li><a href="../../html/node&#x57FA;&#x7840;\buffer.html">buffer</a></li>
-<li><a href="../../html/node&#x57FA;&#x7840;\&#x6D41;.html">&#x6D41;</a></li>
-<li><a href="../../html/node&#x57FA;&#x7840;\&#x6587;&#x4EF6;&#x64CD;&#x4F5C;.html">&#x6587;&#x4EF6;&#x64CD;&#x4F5C;</a></li>
-<li><a href="../../html/node&#x57FA;&#x7840;\&#x6587;&#x4EF6;&#x4E0A;&#x4F20;.html">&#x6587;&#x4EF6;&#x4E0A;&#x4F20;</a>
+<li><a href="doc/html/node&#x57FA;&#x7840;\node&#x5B89;&#x88C5;&#x4E0E;&#x914D;&#x7F6E;.html">node&#x5B89;&#x88C5;&#x4E0E;&#x914D;&#x7F6E;</a></li>
+<li><a href="doc/html/node&#x57FA;&#x7840;\&#x6A21;&#x5757;.html">&#x6A21;&#x5757;</a></li>
+<li><a href="doc/html/node&#x57FA;&#x7840;\buffer.html">buffer</a></li>
+<li><a href="doc/html/node&#x57FA;&#x7840;\&#x6D41;.html">&#x6D41;</a></li>
+<li><a href="doc/html/node&#x57FA;&#x7840;\&#x6587;&#x4EF6;&#x64CD;&#x4F5C;.html">&#x6587;&#x4EF6;&#x64CD;&#x4F5C;</a></li>
+<li><a href="doc/html/node&#x57FA;&#x7840;\&#x6587;&#x4EF6;&#x4E0A;&#x4F20;.html">&#x6587;&#x4EF6;&#x4E0A;&#x4F20;</a>
 -<h1 id="t2node&#x8FDB;&#x9636;">node&#x8FDB;&#x9636; <a href="#t2node&#x8FDB;&#x9636;"> # </a></h1>
 </li>
-<li><a href="../../html/node&#x8FDB;&#x9636;\&#x9759;&#x6001;&#x6587;&#x4EF6;&#x670D;&#x52A1;&#x5668;.html">&#x9759;&#x6001;&#x6587;&#x4EF6;&#x670D;&#x52A1;&#x5668;</a></li>
-<li><a href="../../html/node&#x8FDB;&#x9636;\&#x52A8;&#x6001;&#x670D;&#x52A1;&#x5668;.html">&#x52A8;&#x6001;&#x670D;&#x52A1;&#x5668;</a></li>
-<li><a href="../../html/node&#x8FDB;&#x9636;\&#x52A0;&#x5BC6;.html">&#x52A0;&#x5BC6;</a></li>
-<li><a href="../../html/node&#x8FDB;&#x9636;\&#x538B;&#x7F29;.html">&#x538B;&#x7F29;</a></li>
-<li><a href="../../html/node&#x8FDB;&#x9636;\&#x6D41;&#x9AD8;&#x7EA7;.html">&#x6D41;&#x9AD8;&#x7EA7;</a></li>
-<li><a href="../../html/node&#x8FDB;&#x9636;\Express.html">Express</a></li>
-<li><a href="../../html/node&#x8FDB;&#x9636;\cookie.html">cookie</a></li>
-<li><a href="../../html/node&#x8FDB;&#x9636;\session.html">session</a></li>
-<li><a href="../../html/node&#x8FDB;&#x9636;\websocket.html">websocket</a></li>
-<li><a href="../../html/node&#x8FDB;&#x9636;\socketio.html">socketio</a></li>
+<li><a href="doc/html/node&#x8FDB;&#x9636;\&#x9759;&#x6001;&#x6587;&#x4EF6;&#x670D;&#x52A1;&#x5668;.html">&#x9759;&#x6001;&#x6587;&#x4EF6;&#x670D;&#x52A1;&#x5668;</a></li>
+<li><a href="doc/html/node&#x8FDB;&#x9636;\&#x52A8;&#x6001;&#x670D;&#x52A1;&#x5668;.html">&#x52A8;&#x6001;&#x670D;&#x52A1;&#x5668;</a></li>
+<li><a href="doc/html/node&#x8FDB;&#x9636;\&#x52A0;&#x5BC6;.html">&#x52A0;&#x5BC6;</a></li>
+<li><a href="doc/html/node&#x8FDB;&#x9636;\&#x538B;&#x7F29;.html">&#x538B;&#x7F29;</a></li>
+<li><a href="doc/html/node&#x8FDB;&#x9636;\&#x6D41;&#x9AD8;&#x7EA7;.html">&#x6D41;&#x9AD8;&#x7EA7;</a></li>
+<li><a href="doc/html/node&#x8FDB;&#x9636;\Express.html">Express</a></li>
+<li><a href="doc/html/node&#x8FDB;&#x9636;\cookie.html">cookie</a></li>
+<li><a href="doc/html/node&#x8FDB;&#x9636;\session.html">session</a></li>
+<li><a href="doc/html/node&#x8FDB;&#x9636;\websocket.html">websocket</a></li>
+<li><a href="doc/html/node&#x8FDB;&#x9636;\socketio.html">socketio</a></li>
 </ul>
 <h1 id="t3node&#x9879;&#x76EE;&#x5B9E;&#x6218;">node&#x9879;&#x76EE;&#x5B9E;&#x6218; <a href="#t3node&#x9879;&#x76EE;&#x5B9E;&#x6218;"> # </a></h1>
 <ul>
-<li><a href="../../html/node&#x9879;&#x76EE;\&#x73E0;&#x5CF0;&#x535A;&#x5BA2;.html">&#x73E0;&#x5CF0;&#x535A;&#x5BA2;</a></li>
-<li><a href="../../html/node&#x9879;&#x76EE;\&#x73E0;&#x5CF0;&#x804A;&#x5929;&#x5BA4;.html">&#x73E0;&#x5CF0;&#x804A;&#x5929;&#x5BA4;</a></li>
-<li><a href="../../html/node&#x9879;&#x76EE;\&#x73E0;&#x5CF0;&#x722C;&#x866B;.html">&#x73E0;&#x5CF0;&#x722C;&#x866B;</a></li>
+<li><a href="doc/html/node&#x9879;&#x76EE;\&#x73E0;&#x5CF0;&#x535A;&#x5BA2;.html">&#x73E0;&#x5CF0;&#x535A;&#x5BA2;</a></li>
+<li><a href="doc/html/node&#x9879;&#x76EE;\&#x73E0;&#x5CF0;&#x804A;&#x5929;&#x5BA4;.html">&#x73E0;&#x5CF0;&#x804A;&#x5929;&#x5BA4;</a></li>
+<li><a href="doc/html/node&#x9879;&#x76EE;\&#x73E0;&#x5CF0;&#x722C;&#x866B;.html">&#x73E0;&#x5CF0;&#x722C;&#x866B;</a></li>
 </ul>
 <h1 id="t4linux">linux <a href="#t4linux"> # </a></h1>
 <ul>
-<li><a href="../../html\&#x670D;&#x52A1;&#x5668;\linux&#x57FA;&#x7840;.html">linux&#x57FA;&#x7840;</a></li>
+<li><a href="doc/html\&#x670D;&#x52A1;&#x5668;\linux&#x57FA;&#x7840;.html">linux&#x57FA;&#x7840;</a></li>
 <li><a href="../html\&#x670D;&#x52A1;&#x5668;\linux&#x5E03;&#x7F72;.html">linux&#x5E03;&#x7F72;</a></li>
 </ul>
 <h1 id="t5angular">angular <a href="#t5angular"> # </a></h1>
 <ul>
-<li><a href="../../html/AngularJS\angular&#x5165;&#x95E8;.html">angular&#x5165;&#x95E8;</a></li>
-<li><a href="../../html/AngularJS\angular&#x57FA;&#x7840;.html">angular&#x57FA;&#x7840;</a></li>
-<li><a href="../../html/AngularJS\&#x670D;&#x52A1;.html">&#x670D;&#x52A1;</a></li>
-<li><a href="../../html/AngularJS\&#x6307;&#x4EE4;.html">&#x6307;&#x4EE4;</a></li>
-<li><a href="../../html/AngularJS\route.html">route</a></li>
+<li><a href="doc/html/AngularJS\angular&#x5165;&#x95E8;.html">angular&#x5165;&#x95E8;</a></li>
+<li><a href="doc/html/AngularJS\angular&#x57FA;&#x7840;.html">angular&#x57FA;&#x7840;</a></li>
+<li><a href="doc/html/AngularJS\&#x670D;&#x52A1;.html">&#x670D;&#x52A1;</a></li>
+<li><a href="doc/html/AngularJS\&#x6307;&#x4EE4;.html">&#x6307;&#x4EE4;</a></li>
+<li><a href="doc/html/AngularJS\route.html">route</a></li>
 </ul>
 <h1 id="t6vue">vue <a href="#t6vue"> # </a></h1>
 <ul>
-<li><a href="../../html/vue\Vue&#x5165;&#x95E8;.html">Vue&#x5165;&#x95E8;</a></li>
-<li><a href="../../html/vue\Vue&#x65B9;&#x6CD5;&#x7BC7;.html">Vue&#x65B9;&#x6CD5;&#x7BC7;</a></li>
-<li><a href="../../html/vue\Vue&#x65B9;&#x6CD5;&#x7BC7;2.html">Vue&#x65B9;&#x6CD5;&#x7BC7;2</a></li>
-<li><a href="../../html/vue\Vue&#x7EC4;&#x4EF6;.html">Vue&#x7EC4;&#x4EF6;</a></li>
+<li><a href="doc/html/vue\Vue&#x5165;&#x95E8;.html">Vue&#x5165;&#x95E8;</a></li>
+<li><a href="doc/html/vue\Vue&#x65B9;&#x6CD5;&#x7BC7;.html">Vue&#x65B9;&#x6CD5;&#x7BC7;</a></li>
+<li><a href="doc/html/vue\Vue&#x65B9;&#x6CD5;&#x7BC7;2.html">Vue&#x65B9;&#x6CD5;&#x7BC7;2</a></li>
+<li><a href="doc/html/vue\Vue&#x7EC4;&#x4EF6;.html">Vue&#x7EC4;&#x4EF6;</a></li>
 </ul>
 <h1 id="t7&#x81EA;&#x52A8;&#x5316;&#x6784;&#x5EFA;">&#x81EA;&#x52A8;&#x5316;&#x6784;&#x5EFA; <a href="#t7&#x81EA;&#x52A8;&#x5316;&#x6784;&#x5EFA;"> # </a></h1>
 <ul>
-<li><a href="../../html\&#x524D;&#x7AEF;&#x5DE5;&#x7A0B;&#x5316;\gulp.html">gulp</a></li>
-<li><a href="../../html\&#x524D;&#x7AEF;&#x5DE5;&#x7A0B;&#x5316;\webpack.html">webpack</a></li>
+<li><a href="doc/html\&#x524D;&#x7AEF;&#x5DE5;&#x7A0B;&#x5316;\gulp.html">gulp</a></li>
+<li><a href="doc/html\&#x524D;&#x7AEF;&#x5DE5;&#x7A0B;&#x5316;\webpack.html">webpack</a></li>
 </ul>
 <h1 id="t8react">react <a href="#t8react"> # </a></h1>
 <ul>
-<li><a href="../../html\react\react&#x5165;&#x95E8;.html">react&#x5165;&#x95E8;</a></li>
-<li><a href="../../html\react\react&#x57FA;&#x7840;&#x5E94;&#x7528;.html">react&#x57FA;&#x7840;&#x5E94;&#x7528;</a></li>
-<li><a href="../../html\react\react-router.html">react-router</a></li>
-<li><a href="../../html\react\ReactNativeMac.html">ReactNativeMac</a></li>
-<li><a href="../../html\react\ReactNativeWin.html">ReactNativeWin</a></li>
+<li><a href="doc/html\react\react&#x5165;&#x95E8;.html">react&#x5165;&#x95E8;</a></li>
+<li><a href="doc/html\react\react&#x57FA;&#x7840;&#x5E94;&#x7528;.html">react&#x57FA;&#x7840;&#x5E94;&#x7528;</a></li>
+<li><a href="doc/html\react\react-router.html">react-router</a></li>
+<li><a href="doc/html\react\ReactNativeMac.html">ReactNativeMac</a></li>
+<li><a href="doc/html\react\ReactNativeWin.html">ReactNativeWin</a></li>
 </ul>
 
 
