--- a/html/首页.html
+++ b/html/首页.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>珠峰JS全栈</title>
 
-    <link rel="stylesheet" type="text/css" href="/doc/static/css/main.css">
+    <link rel="stylesheet" type="text/css" href="static/css/main.css">
 </head>
 <body>
 <div class="navbar navbar-line">
@@ -15,7 +15,7 @@
 
 
                 珠峰JS全栈
-            
+
         </div>
         <input type="checkbox" id="idoc_nav" />
         <div class="menu_tree">
@@ -38,7 +38,7 @@
 <div class="container">
 
         <div class="page-toc">
-            <ul><li><a href="#t01.  git">1.  git</a></li><li><a href="#t12. 工具">2. 工具</a></li><li><a href="#t23. node基础">3. node基础</a></li><li><a href="#t34. node进阶">4. node进阶</a></li><li><a href="#t45. 数据库">5. 数据库</a></li><li><a href="#t56. node项目实战">6. node项目实战</a></li><li><a href="#t67. linux">7. linux</a></li><li><a href="#t78. angular">8. angular</a></li><li><a href="#t89. vue">9. vue</a></li><li><a href="#t910. 自动化构建">10. 自动化构建</a></li><li><a href="#t1011. react">11. react</a></li></ul>
+            <ul><li><a href="#t01.  git">1.  git</a></li><li><a href="#t12. 工具">2. 工具</a></li><li><a href="#t23. node基础">3. node基础</a></li><li><a href="#t34. node进阶">4. node进阶</a></li><li><a href="#t45. 数据库">5. 数据库</a></li><li><a href="#t56. node项目实战">6. node项目实战</a></li><li><a href="#t67. linux">7. linux</a></li><li><a href="#t78. angular">8. angular</a></li><li><a href="#t89. vue">9. vue</a></li><li><a href="#t910. 自动化构建">10. 自动化构建</a></li><li><a href="#t1011. react">11. react</a></li><li><a href="#t1112.面试">12.面试</a></li></ul>
         </div>
 
         <div class="content markdown-body">
@@ -75,9 +75,9 @@
 </ol>
 <h2 id="t45. &#x6570;&#x636E;&#x5E93;">5. &#x6570;&#x636E;&#x5E93; <a href="#t45. &#x6570;&#x636E;&#x5E93;"> # </a></h2>
 <ol>
-<li><a href="html\&#x6570;&#x636E;&#x5E93;\mongodb.html">mongodb</a></li>
-<li><a href="html\&#x6570;&#x636E;&#x5E93;\mongoose.html">mongoose</a></li>
-<li><a href="html\&#x6570;&#x636E;&#x5E93;\mysql.html">mysql</a></li>
+<li><a href="/doc/html\&#x6570;&#x636E;&#x5E93;\mongodb.html">mongodb</a></li>
+<li><a href="/doc/html\&#x6570;&#x636E;&#x5E93;\mongoose.html">mongoose</a></li>
+<li><a href="/doc/html\&#x6570;&#x636E;&#x5E93;\mysql.html">mysql</a></li>
 </ol>
 <h2 id="t56. node&#x9879;&#x76EE;&#x5B9E;&#x6218;">6. node&#x9879;&#x76EE;&#x5B9E;&#x6218; <a href="#t56. node&#x9879;&#x76EE;&#x5B9E;&#x6218;"> # </a></h2>
 <ol>
@@ -118,6 +118,11 @@
 <li><a href="/doc/html/react/redux.html">redux</a></li>
 <li><a href="/doc/html/react/ReactNativeMac.html">react-native-mac</a></li>
 <li><a href="/doc/html/react/ReactNativeWin.html">react-native-win</a></li>
+</ol>
+<h2 id="t1112.&#x9762;&#x8BD5;">12.&#x9762;&#x8BD5; <a href="#t1112.&#x9762;&#x8BD5;"> # </a></h2>
+<ol>
+<li><a href="http://yuntv.letv.com/bcloud.html?uu=zna4ig8gbr&amp;vu=df1b1122a3&amp;auto_play=1&amp;width=640&amp;height=360&amp;lang=zh_CN">&#x7F8E;&#x56E2;&#x963F;&#x91CC;&#x9762;&#x8BD5;</a></li>
+<li><a href="http://yuntv.letv.com/bcloud.html?uu=zna4ig8gbr&amp;vu=b589b75d96&amp;auto_play=1&amp;width=640&amp;height=360&amp;lang=zh_CN">&#x521D;&#x7EA7;&#x6570;&#x636E;&#x7ED3;&#x6784;</a></li>
 </ol>
 
 
