--- a/html/node课程/2.babel.html
+++ b/html/node课程/2.babel.html
@@ -60,8 +60,7 @@
 <h2 id="t2&#x547D;&#x4EE4;&#x884C;&#x4E0B;&#x4F7F;&#x7528;Babel">&#x547D;&#x4EE4;&#x884C;&#x4E0B;&#x4F7F;&#x7528;Babel <a href="#t2&#x547D;&#x4EE4;&#x884C;&#x4E0B;&#x4F7F;&#x7528;Babel"> # </a></h2>
 <p>&#x8FD9;&#x5C06;&#x628A;&#x7F16;&#x8BD1;&#x540E;&#x7684;&#x7ED3;&#x679C;&#x76F4;&#x63A5;&#x8F93;&#x51FA;&#x81F3;&#x7EC8;&#x7AEF;</p>
 <pre><code>$ babel es6.js
-</code></pre><p>&#x52A0;&#x4E0A;<code>-o</code>&#x53C2;&#x6570; &#x53EF;&#x4EE5;&#x5C06;&#x7ED3;&#x679C;&#x5199;&#x5165;&#x5230;&#x6307;&#x5B9A;&#x7684;&#x6587;&#x4EF6;</p>
-<h2 id="t3&#x914D;&#x7F6E; Babel">&#x914D;&#x7F6E; Babel <a href="#t3&#x914D;&#x7F6E; Babel"> # </a></h2>
+</code></pre><h2 id="t3&#x914D;&#x7F6E; Babel">&#x914D;&#x7F6E; Babel <a href="#t3&#x914D;&#x7F6E; Babel"> # </a></h2>
 <p>Babel&#x662F;&#x4E00;&#x4E2A;<span class="text-danger">&#x901A;&#x7528;</span>&#x7F16;&#x8BD1;&#x5668;&#xFF0C;&#x56E0;&#x6B64;&#x9ED8;&#x8BA4;&#x60C5;&#x51B5;&#x4E0B;&#x5B83;&#x53CD;&#x800C;&#x4EC0;&#x4E48;&#x90FD;&#x4E0D;&#x505A;,&#x4F60;&#x5FC5;&#x987B;&#x660E;&#x786E;&#x5730;&#x544A;&#x8BC9;Babel&#x5E94;&#x8BE5;&#x8981;&#x505A;&#x4EC0;&#x4E48;
 &#x5728;&#x9879;&#x76EE;&#x6839;&#x76EE;&#x5F55;&#x4E0B;&#x521B;&#x5EFA;<span class="text-danger">.babelrc</span>&#x6587;&#x4EF6;,&#x8FD9;&#x662F;&#x7528;&#x6765;&#x8BA9;<em>Babel</em>&#x505A;&#x4F60;&#x8981;&#x5B83;&#x505A;&#x7684;&#x4E8B;&#x60C5;&#x7684;&#x914D;&#x7F6E;&#x6587;&#x4EF6;</p>
 <pre><code>{
@@ -83,16 +82,23 @@
 <h2 id="t5babel-preset-stage-x ES7&#x63D0;&#x6848;">babel-preset-stage-x ES7&#x63D0;&#x6848; <a href="#t5babel-preset-stage-x ES7&#x63D0;&#x6848;"> # </a></h2>
 <p>JavaScript&#x8FD8;&#x6709;&#x4E00;&#x4E9B;&#x63D0;&#x6848;&#x8FD8;&#x6CA1;&#x6709;&#x5B8C;&#x5168;&#x786E;&#x5B9A;,&#x5206;&#x4E3A;5&#x4E2A;&#x9636;&#x6BB5;</p>
 <ul>
-<li>Stage 0&#xFF1A;strawman &#x7A3B;&#x8349;&#x4EBA;   babel-preset-stage-0
+<li>Stage 0&#xFF1A;strawman &#x7A3B;&#x8349;&#x4EBA;
 &#x5728;&#x8BE5;&#x9636;&#x6BB5;&#x53EF;&#x4EE5;&#x81EA;&#x7531;&#x7684;&#x4F7F;&#x7528;&#x4EFB;&#x610F;&#x65B9;&#x5F0F;&#x63D0;&#x4EA4;&#x63A8;&#x52A8;ECMAScript&#x53D1;&#x5C55;&#x7684;&#x60F3;&#x6CD5;</li>
-<li>Stage 1: proposal &#x63D0;&#x8BAE; babel-preset-stage-1
+<li>Stage 1: proposal &#x63D0;&#x8BAE;
 &#x9636;&#x6BB5;1&#x662F;&#x5BF9;&#x6240;&#x63D0;&#x4EA4;&#x7279;&#x6027;&#x7684;&#x6B63;&#x5F0F;&#x5EFA;&#x8BAE;&#x3002;</li>
 <li>Stage 2: draft &#x8349;&#x6848; babel-preset-stage-2
 &#x9636;&#x6BB5;2&#x662F;&#x5C06;&#x4F1A;&#x51FA;&#x73B0;&#x6807;&#x51C6;&#x4E2D;&#x7684;&#x7B2C;&#x4E00;&#x4E2A;&#x7248;&#x672C;&#x3002;&#x6B64;&#x65F6;&#xFF0C;&#x5C06;&#x4F1A;&#x4E0E;&#x51FA;&#x73B0;&#x5728;&#x6807;&#x51C6;&#x4E2D;&#x7684;&#x6700;&#x7EC8;&#x7279;&#x6027;&#x662F;&#x5DEE;&#x4E0D;&#x591A;&#x7684;&#x3002;</li>
-<li>Stage 3: canidate &#x5019;&#x9009; babel-preset-stage-3
+<li>Stage 3: canidate &#x5019;&#x9009;
 &#x6B64;&#x65F6;&#x63D0;&#x8BAE;&#x5DF2;&#x7ECF;&#x63A5;&#x8FD1;&#x5B8C;&#x6210;&#xFF0C;&#x53EA;&#x9700;&#x8981;&#x5F97;&#x5230;&#x63D0;&#x8BAE;&#x5B9E;&#x73B0;&#x65B9;&#x7684;&#x53CD;&#x9988;&#xFF0C;&#x4EE5;&#x53CA;&#x7531;&#x7528;&#x6237;&#x6765;&#x8FDB;&#x4E00;&#x6B65;&#x63A8;&#x52A8;&#x3002;</li>
 <li>Stage 4: finished &#x5B8C;&#x6210;
 &#x63D0;&#x8BAE;&#x5C06;&#x88AB;&#x5305;&#x62EC;&#x5230;&#x6807;&#x51C6;&#x4E4B;&#x4E2D;&#x3002;</li>
+</ul>
+<p>&#x56DB;&#x4E2A;&#x9636;&#x6BB5;&#x5BF9;&#x5E94;&#x7684;&#x6A21;&#x5757;</p>
+<ul>
+<li>babel-preset-stage-0</li>
+<li>babel-preset-stage-1</li>
+<li>babel-preset-stage-2</li>
+<li>babel-preset-stage-3</li>
 </ul>
 <h3 id="t6&#x5B89;&#x88C5;&#x4F9D;&#x8D56;&#x6A21;&#x5757;">&#x5B89;&#x88C5;&#x4F9D;&#x8D56;&#x6A21;&#x5757; <a href="#t6&#x5B89;&#x88C5;&#x4F9D;&#x8D56;&#x6A21;&#x5757;"> # </a></h3>
 <pre><code>npm install --save-dev babel-preset-stage-2
