--- a/html/node课程/内网使用.html
+++ b/html/node课程/内网使用.html
@@ -38,25 +38,25 @@
 <div class="container">
     
         <div class="page-toc">
-            <ul><li><a href="#t0内网IP地址">内网IP地址</a><ul><li><a href="#t1通过资源管理器访问">通过资源管理器访问</a></li><li><a href="#t2通过window客户端访问">通过window客户端访问</a></li><li><a href="#t3通过 mac 客户端访问">通过 mac 客户端访问</a></li></ul></li><li><a href="#t4通过内网下载npm包">通过内网下载npm包</a><ul><li><a href="#t5暂时指定代理">暂时指定代理</a></li><li><a href="#t6永久指定代理">永久指定代理</a></li><li><a href="#t7使用nrm动态切换代理">使用nrm动态切换代理</a></li></ul></li></ul>
+            <ul><li><a href="#t01. 内网IP地址">1. 内网IP地址</a><ul><li><a href="#t11.1 通过资源管理器访问">1.1 通过资源管理器访问</a></li><li><a href="#t21.2 通过window客户端访问">1.2 通过window客户端访问</a></li><li><a href="#t31.3 通过 mac 客户端访问">1.3 通过 mac 客户端访问</a></li></ul></li><li><a href="#t42. 通过内网下载npm包">2. 通过内网下载npm包</a><ul><li><a href="#t52.1 暂时指定代理">2.1 暂时指定代理</a></li><li><a href="#t62.2 永久指定代理">2.2 永久指定代理</a></li><li><a href="#t72.3 使用nrm动态切换代理">2.3 使用nrm动态切换代理</a></li></ul></li></ul>
         </div>
 
         <div class="content markdown-body">
 
-            <h2 id="t0&#x5185;&#x7F51;IP&#x5730;&#x5740;">&#x5185;&#x7F51;IP&#x5730;&#x5740; <a href="#t0&#x5185;&#x7F51;IP&#x5730;&#x5740;"> # </a></h2>
-<p>172.18.0.199</p>
-<h3 id="t1&#x901A;&#x8FC7;&#x8D44;&#x6E90;&#x7BA1;&#x7406;&#x5668;&#x8BBF;&#x95EE;">&#x901A;&#x8FC7;&#x8D44;&#x6E90;&#x7BA1;&#x7406;&#x5668;&#x8BBF;&#x95EE; <a href="#t1&#x901A;&#x8FC7;&#x8D44;&#x6E90;&#x7BA1;&#x7406;&#x5668;&#x8BBF;&#x95EE;"> # </a></h3>
-<p>ftp://172.18.0.199/</p>
-<h3 id="t2&#x901A;&#x8FC7;window&#x5BA2;&#x6237;&#x7AEF;&#x8BBF;&#x95EE;">&#x901A;&#x8FC7;window&#x5BA2;&#x6237;&#x7AEF;&#x8BBF;&#x95EE; <a href="#t2&#x901A;&#x8FC7;window&#x5BA2;&#x6237;&#x7AEF;&#x8BBF;&#x95EE;"> # </a></h3>
+            <h2 id="t01. &#x5185;&#x7F51;IP&#x5730;&#x5740;">1. &#x5185;&#x7F51;IP&#x5730;&#x5740; <a href="#t01. &#x5185;&#x7F51;IP&#x5730;&#x5740;"> # </a></h2>
+<p><a href="172.18.0.199">172.18.0.199</a></p>
+<h3 id="t11.1 &#x901A;&#x8FC7;&#x8D44;&#x6E90;&#x7BA1;&#x7406;&#x5668;&#x8BBF;&#x95EE;">1.1 &#x901A;&#x8FC7;&#x8D44;&#x6E90;&#x7BA1;&#x7406;&#x5668;&#x8BBF;&#x95EE; <a href="#t11.1 &#x901A;&#x8FC7;&#x8D44;&#x6E90;&#x7BA1;&#x7406;&#x5668;&#x8BBF;&#x95EE;"> # </a></h3>
+<p><a href="ftp://172.18.0.199/">ftp://172.18.0.199/</a></p>
+<h3 id="t21.2 &#x901A;&#x8FC7;window&#x5BA2;&#x6237;&#x7AEF;&#x8BBF;&#x95EE;">1.2 &#x901A;&#x8FC7;window&#x5BA2;&#x6237;&#x7AEF;&#x8BBF;&#x95EE; <a href="#t21.2 &#x901A;&#x8FC7;window&#x5BA2;&#x6237;&#x7AEF;&#x8BBF;&#x95EE;"> # </a></h3>
 <p><a href="https://filezilla-project.org/download.php?type=client">https://filezilla-project.org/download.php?type=client</a></p>
-<h3 id="t3&#x901A;&#x8FC7; mac &#x5BA2;&#x6237;&#x7AEF;&#x8BBF;&#x95EE;">&#x901A;&#x8FC7; mac &#x5BA2;&#x6237;&#x7AEF;&#x8BBF;&#x95EE; <a href="#t3&#x901A;&#x8FC7; mac &#x5BA2;&#x6237;&#x7AEF;&#x8BBF;&#x95EE;"> # </a></h3>
+<h3 id="t31.3 &#x901A;&#x8FC7; mac &#x5BA2;&#x6237;&#x7AEF;&#x8BBF;&#x95EE;">1.3 &#x901A;&#x8FC7; mac &#x5BA2;&#x6237;&#x7AEF;&#x8BBF;&#x95EE; <a href="#t31.3 &#x901A;&#x8FC7; mac &#x5BA2;&#x6237;&#x7AEF;&#x8BBF;&#x95EE;"> # </a></h3>
 <p><a href="https://filezilla-project.org/download.php?type=client">https://filezilla-project.org/download.php?type=client</a></p>
-<h2 id="t4&#x901A;&#x8FC7;&#x5185;&#x7F51;&#x4E0B;&#x8F7D;npm&#x5305;">&#x901A;&#x8FC7;&#x5185;&#x7F51;&#x4E0B;&#x8F7D;npm&#x5305; <a href="#t4&#x901A;&#x8FC7;&#x5185;&#x7F51;&#x4E0B;&#x8F7D;npm&#x5305;"> # </a></h2>
-<h3 id="t5&#x6682;&#x65F6;&#x6307;&#x5B9A;&#x4EE3;&#x7406;">&#x6682;&#x65F6;&#x6307;&#x5B9A;&#x4EE3;&#x7406; <a href="#t5&#x6682;&#x65F6;&#x6307;&#x5B9A;&#x4EE3;&#x7406;"> # </a></h3>
+<h2 id="t42. &#x901A;&#x8FC7;&#x5185;&#x7F51;&#x4E0B;&#x8F7D;npm&#x5305;">2. &#x901A;&#x8FC7;&#x5185;&#x7F51;&#x4E0B;&#x8F7D;npm&#x5305; <a href="#t42. &#x901A;&#x8FC7;&#x5185;&#x7F51;&#x4E0B;&#x8F7D;npm&#x5305;"> # </a></h2>
+<h3 id="t52.1 &#x6682;&#x65F6;&#x6307;&#x5B9A;&#x4EE3;&#x7406;">2.1 &#x6682;&#x65F6;&#x6307;&#x5B9A;&#x4EE3;&#x7406; <a href="#t52.1 &#x6682;&#x65F6;&#x6307;&#x5B9A;&#x4EE3;&#x7406;"> # </a></h3>
 <pre><code>npm install mongoose --registry http://172.18.0.199
-</code></pre><h3 id="t6&#x6C38;&#x4E45;&#x6307;&#x5B9A;&#x4EE3;&#x7406;">&#x6C38;&#x4E45;&#x6307;&#x5B9A;&#x4EE3;&#x7406; <a href="#t6&#x6C38;&#x4E45;&#x6307;&#x5B9A;&#x4EE3;&#x7406;"> # </a></h3>
+</code></pre><h3 id="t62.2 &#x6C38;&#x4E45;&#x6307;&#x5B9A;&#x4EE3;&#x7406;">2.2 &#x6C38;&#x4E45;&#x6307;&#x5B9A;&#x4EE3;&#x7406; <a href="#t62.2 &#x6C38;&#x4E45;&#x6307;&#x5B9A;&#x4EE3;&#x7406;"> # </a></h3>
 <pre><code>npm config set registry &quot;http://172.18.0.199&quot;
-</code></pre><h3 id="t7&#x4F7F;&#x7528;nrm&#x52A8;&#x6001;&#x5207;&#x6362;&#x4EE3;&#x7406;">&#x4F7F;&#x7528;nrm&#x52A8;&#x6001;&#x5207;&#x6362;&#x4EE3;&#x7406; <a href="#t7&#x4F7F;&#x7528;nrm&#x52A8;&#x6001;&#x5207;&#x6362;&#x4EE3;&#x7406;"> # </a></h3>
+</code></pre><h3 id="t72.3 &#x4F7F;&#x7528;nrm&#x52A8;&#x6001;&#x5207;&#x6362;&#x4EE3;&#x7406;">2.3 &#x4F7F;&#x7528;nrm&#x52A8;&#x6001;&#x5207;&#x6362;&#x4EE3;&#x7406; <a href="#t72.3 &#x4F7F;&#x7528;nrm&#x52A8;&#x6001;&#x5207;&#x6362;&#x4EE3;&#x7406;"> # </a></h3>
 <pre><code>npm install nrm -g
 nrm add zhufeng http://172.18.0.199
 nrm use zhufeng
