--- a/html/node课程/6.mongodb.html
+++ b/html/node课程/6.mongodb.html
@@ -52,9 +52,15 @@
 <h3 id="t22.1 windows&#x5B89;&#x88C5;">2.1 windows&#x5B89;&#x88C5; <a href="#t22.1 windows&#x5B89;&#x88C5;"> # </a></h3>
 <p><a href="https://www.mongodb.org/downloads">Windows&#x5B98;&#x65B9;&#x5B89;&#x88C5;&#x6307;&#x5357;</a></p>
 <ul>
-<li>&#x767E;&#x5EA6;&#x4E91; 32&#x4F4D; <a href="http://pan.baidu.com/s/1c1Y26Py">http://pan.baidu.com/s/1c1Y26Py</a></li>
-<li>&#x767E;&#x5EA6;&#x4E91; 64&#x4F4D; <a href="http://pan.baidu.com/s/1hsDBRRu">http://pan.baidu.com/s/1hsDBRRu</a></li>
-<li>windows&#x5BA2;&#x6237;&#x7AEF; <a href="http://pan.baidu.com/s/1bpdorRD">http://pan.baidu.com/s/1bpdorRD</a></li>
+<li><p>mongodb32&#x4F4D;&#x5B89;&#x88C5;&#x7248;
+<a href="http://pan.baidu.com/s/1mhQVHl2">http://pan.baidu.com/s/1mhQVHl2</a></p>
+</li>
+<li><p>MongoDB64&#x4F4D;&#x7EFF;&#x8272;&#x7248;
+<a href="http://pan.baidu.com/s/1cMM9oq">http://pan.baidu.com/s/1cMM9oq</a></p>
+</li>
+<li><p>mongo&#x5BA2;&#x6237;&#x7AEF;
+<a href="http://pan.baidu.com/s/1kUIQlUZ">http://pan.baidu.com/s/1kUIQlUZ</a></p>
+</li>
 </ul>
 <h3 id="t32.2 mac&#x5B89;&#x88C5;">2.2 mac&#x5B89;&#x88C5; <a href="#t32.2 mac&#x5B89;&#x88C5;"> # </a></h3>
 <p><a href="https://docs.mongodb.com/manual/tutorial/install-mongodb-on-os-x/">Mac&#x5B98;&#x65B9;&#x5B89;&#x88C5;&#x6307;&#x5357;</a></p>
